--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "weather"
   ],
   "author": "Daria Lipinskaia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.4"
+  }
 }
