--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Daria Lipinskaia",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^0.21.4",
+    "chalk": "^5.0.1",
+    "dedent-js": "^1.0.1"
   }
 }
